# grpc-examples

./: README.md
.github/workflows/: docker.yaml  hydrun.yaml
MatherNet/: .gitignore  Deverfile  Dockerfile  Hydrunfile  Makefile  MatherNet.csproj  Program.cs  README.md  Startup.cs  skaffold.yaml
MatherNet/Properties/: launchSettings.json
MatherNet/Protos/: mather.proto
MatherNet/Services/: MatherService.cs
MatherNet/charts/MatherNet/: Chart.yaml  values.yaml
gomather/: Deverfile  Dockerfile  Hydrunfile  Makefile  README.md  go.mod  go.sum  main.go  skaffold.yaml
gomather/charts/gomather/: Chart.yaml  values.yaml
gomather/pkg/services/: mather.go
mather-rb/: Gemfile  Hydrunfile  Makefile  main.rb
mather-rb/proto/: mather.proto  mather_pb.rb  mather_services_pb.rb
mather-rb/services/: mather.rb
mather-rs/: Cargo.toml  Dockerfile  Hydrunfile  Makefile  README.md  build.rs  skaffold.yaml
mather-rs/charts/mather-rs/: Chart.yaml  values.yaml
mather-rs/charts/mather-rs/templates/: stack.yaml
mather-rs/proto/: mather.proto
mather-rs/src/: main.rs
mather.js/: Dockerfile  Hydrunfile  Makefile  README.md  main.js  package.json  skaffold.yaml
mather.js/charts/mather-js/: Chart.yaml  values.yaml
mather.js/proto/: mather_grpc_pb.js  mather_pb.js
mather.js/services/: mather.js
pymather/: Deverfile  Dockerfile  Hydrunfile  Makefile  README.md  main.py  requirements.txt  skaffold.yaml
pymather/charts/pymather/: Chart.yaml  values.yaml
pymather/pymather/proto/: mather_pb2.py  mather_pb2_grpc.py
pymather/pymather/services/: mather.py
(+5 files in other folders)
